--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "install-client": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "setup": "npm install && npm install --prefix client",
+    "setup-prod": "npm install && npm install --prefix client && npm run build-client",
+    "prod": "node index.js && npm start --prefix client",
     "build": "npm run build-client"
   },
   "keywords": [],
